fix alignment of burger area and use rem unit for width of bars

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -65,7 +65,7 @@ body {
   outline: none;
   line-height: 1;
   position: relative;
-  width: 2.75rem;
+  width: 3rem;
   margin-left: auto;
   padding: 0;
 }
@@ -78,7 +78,7 @@ body {
   margin-left: -7px;
   position: absolute;
   top: 50%;
-  width: 15px;
+  width: 1rem;
 }
 
 .navbar-burger span:nth-child(1) {
